added notebook swagger doc
